--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="header">
       <div id="header_logo">
-        <img id="logo" src="resources/Icons/Cube Chaos Icon.png">
+        <img id="logo" src="Resources/Icons/Cube_Chaos_logo.png">
         <img id="logo_text" src="resources/Logos/Cube Chaos FullHD.png">
       </div>
     </div>
