implemented temporary testing screenshots

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <title>CubeChaos</title>
     <link rel="stylesheet" href="css/base.css">
   </head>
   <body>
     <div id="header">
       <div id="header_logo">
-        <img id="logo" src="Resources/Icons/Cube_Chaos_logo.png">
-        <img id="logo_text" src="resources/Logos/Cube Chaos FullHD.png">
+        <img id="logo" src="resources/icons/cube_chaos_logo.png">
+        <img id="logo_text" src="resources/logos/cube_chaos_fullhd.png">
       </div>
     </div>
     <div id="navbar">
@@ -27,14 +27,12 @@
     <div class="footer">
       <div class="footer_content">
         <img class="footer_item" id="footer_alien_logo" src="https://static.wixstatic.com/media/44b079_4f4e1ce88e374dac81f13f016ecb3e6c~mv2.png/v1/fill/w_120,h_114,al_c,q_85,usm_0.66_1.00_0.01/Mr3DAlien%20%5BWhite%5D.webp">
-        <img class="footer_item" id="footer_pathway_studio_logo" src="resources/Logos/PathwayStudios.png">
+        <img class="footer_item" id="footer_pathway_studio_logo" src="resources/logos/pathway_studios.png">
         <img class="footer_item" id="footer_sticky_piston_logo" src="https://static.wixstatic.com/media/44b079_eef048478f1d4916be00f1975f6f153e~mv2.png/v1/fill/w_464,h_120,al_c,q_85,usm_0.66_1.00_0.01/Stickypiston.webp">
       </div>
     </div>
     <script src="js/anime.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script>
-
-    </script>
+    <script></script>
   </body>
 </html>
