--- a/java_edition.html
+++ b/java_edition.html
@@ -8,8 +8,8 @@
   <body>
     <div id="header">
       <div id="header_logo">
-        <img id="logo" src="resources/Icons/Cube Chaos Icon.png">
-        <img id="logo_text" src="resources/Logos/Cube Chaos FullHD.png">
+        <img id="logo" src="resources/icons/cube_chaos_logo.png">
+        <img id="logo_text" src="resources/logos/cube_chaos_fullhd.png">
       </div>
     </div>
     <div id="navbar">
@@ -21,15 +21,26 @@
         <img class="java_logo" src="https://static.wixstatic.com/media/44b079_f76f1cfd9cf549aaa1d33cabdc863a58~mv2.png/v1/fill/w_512,h_64,al_c,q_85/edition.webp">
         <div class="screenshot_slide">
           <div id="compare">
-            <img id="slider_left_img" src="resources/compare/compare_1_default.png" alt="Before" />
-            <img id="slider_right_img" src="resources/compare/compare_1_cubechaos.png" alt="After" />
+            <img id="slider_left_img" src="resources/screenshots/java_edition/forest_cubechaos.png" alt="Before" />
+            <img id="slider_right_img" src="resources/screenshots/java_edition/forest_vanilla.png" alt="After" />
           </div>
           <div class="screenshot_slide_selector">
-            <img class="screenshot_slide_preview_img" src="resources/compare/compare_1_cubechaos.png">
-            <img class="screenshot_slide_preview_img" src="resources/compare/compare_2_cubechaos.png">
-            <img class="screenshot_slide_preview_img" src="https://www.wallpaperflare.com/static/1005/886/331/minecraft-render-screen-shot-lake-wallpaper.jpg">
-            <img class="screenshot_slide_preview_img" src="https://www.wallpaperflare.com/static/1005/886/331/minecraft-render-screen-shot-lake-wallpaper.jpg">
-            <img class="screenshot_slide_preview_img" src="https://www.wallpaperflare.com/static/1005/886/331/minecraft-render-screen-shot-lake-wallpaper.jpg">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/forest_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/cave_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/bee_hive_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/jungle_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/badlands_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/desert_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/pillager_outpost_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/monument_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/mansion_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/snowy_tundra_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/fortress_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/bastion_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/basalt_deltas_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/soul_sand_valley_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/warped_forest_cubechaos.png">
+            <img class="screenshot_slide_preview_img" src="resources/screenshots/java_edition/end_cubechaos.png">
           </div>
             <!--</div>
             <div class="screenshot_slide_selector_btn screenshot_slide_selector_left"></div>
@@ -65,7 +76,7 @@
     <div class="footer">
       <div class="footer_content">
         <img class="footer_item" id="footer_alien_logo" src="https://static.wixstatic.com/media/44b079_4f4e1ce88e374dac81f13f016ecb3e6c~mv2.png/v1/fill/w_120,h_114,al_c,q_85,usm_0.66_1.00_0.01/Mr3DAlien%20%5BWhite%5D.webp">
-        <img class="footer_item" id="footer_pathway_studio_logo" src="resources/Logos/PathwayStudios.png">
+        <img class="footer_item" id="footer_pathway_studio_logo" src="resources/logos/pathway_studios.png">
         <img class="footer_item" id="footer_sticky_piston_logo" src="https://static.wixstatic.com/media/44b079_eef048478f1d4916be00f1975f6f153e~mv2.png/v1/fill/w_464,h_120,al_c,q_85,usm_0.66_1.00_0.01/Stickypiston.webp">
       </div>
     </div>
