--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <title>CubeChaos</title>
     <link rel="stylesheet" href="css/base.css">
+    <link rel="icon" type="image/x-icon" href="resources/icons/cube_chaos_icon.svg" />
   </head>
   <body>
     <div id="header">
