--- a/downloads.html
+++ b/downloads.html
@@ -21,14 +21,14 @@
     <div class="content">
       <div class="content_sections">
         <a href="java_edition.html">
-          <img class="content_selection_image" id="java_edition_selection_image" src="https://static.wixstatic.com/media/44b079_ceef92a5ad064ca7a70bcdeb09d4a601~mv2.png/v1/fill/w_956,h_199,al_c,q_85,usm_0.66_1.00_0.01/Java%20Edition.webp">
+          <img class="content_selection_image" id="java_edition_selection_image" src="resources/buttons/big_buttons/java_edition.png">
         </a>
         <a href="bedrock_edition.html">
-          <img class="content_selection_image" id="bedrock_edition_selection_image" src="https://static.wixstatic.com/media/44b079_00380c948e7f437bb0805035f618747a~mv2.png/v1/fill/w_956,h_199,al_c,q_85,usm_0.66_1.00_0.01/Bedrock%20Edition.webp">
+          <img class="content_selection_image" id="bedrock_edition_selection_image" src="resources/buttons/big_buttons/bedrock_edition.png">
         </a>
-        <img class="content_selection_image" id="cubechaos_addons_selection_image" src="https://static.wixstatic.com/media/44b079_9773a702cc5941d3ba07f95de613835a~mv2.png/v1/fill/w_956,h_199,al_c,q_85,usm_0.66_1.00_0.01/Addons%20%5BNEW%5D.webp">
+        <img class="content_selection_image" id="cubechaos_addons_selection_image" src="resources/buttons/big_buttons/addons.png">
         <a href="http://mr3dalien.net">
-          <img class="content_selection_image" id="more_selection_image" src="https://static.wixstatic.com/media/44b079_010d79d30e9e45078f529d3745fc4ce2~mv2.png/v1/fill/w_956,h_199,al_c,q_85,usm_0.66_1.00_0.01/More.webp">
+          <img class="content_selection_image" id="more_selection_image" src="resources/buttons/big_buttons/more.png">
         </a>
       </div>
     </div>
