added "more_button" to code

--- a/java_edition.html
+++ b/java_edition.html
@@ -71,7 +71,7 @@
             <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_e9ebacf52993488993a778eda2ec616f~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_0%5D.webp"></a>
           </div>
           <div class="more_versions">
-            <img id="more_versions_button" src="https://static.wixstatic.com/media/44b079_81556dc9342d40dc8954f16f618e808e~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_6%5D%20Red.webp">
+            <img id="more_versions_button" src="resources/buttons/download_buttons/more_button.png">
           </div>
         </div>
     </div>
