--- a/addons.html
+++ b/addons.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <title>CubeChaos</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="icon" type="image/x-icon" href="resources/icons/cube_chaos_icon.svg" />
@@ -19,19 +19,10 @@
     </div>
     <div class="header_spacer"></div>
     <div class="content">
-      <div class="content_sections">
-        <a href="java_edition.html">
-          <img class="content_selection_image" id="java_edition_selection_image" src="resources/buttons/big_buttons/java_edition.png">
-        </a>
-        <a href="bedrock_edition.html">
-          <img class="content_selection_image" id="bedrock_edition_selection_image" src="resources/buttons/big_buttons/bedrock_edition.png">
-        </a>
-        <a href="addons.html">
-          <img class="content_selection_image" id="cubechaos_addons_selection_image" src="resources/buttons/big_buttons/addons.png">
-        </a>
-        <a href="http://mr3dalien.net">
-          <img class="content_selection_image" id="more_selection_image" src="resources/buttons/big_buttons/more.png">
-        </a>
+      <div class="addons_card_container">
+          <img src="resources/addons/3d_blocks.png">
+          <img src="resources/addons/3d_crystals.png">
+          <img src="resources/addons/3d_ores.png">
       </div>
     </div>
     <div class="footer">
@@ -43,9 +34,6 @@
     </div>
     <script src="js/anime.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/base.js"></script>
-    <script>
-
-    </script>
+    <script></script>
   </body>
 </html>
