added 3d_blocks addon

--- a/addons.html
+++ b/addons.html
@@ -20,7 +20,7 @@
     <div class="header_spacer"></div>
     <div class="content">
       <div class="addons_card_container">
-          <img src="resources/addons/3d_blocks.png">
+          <img id="3d_blocks_card" src="resources/addons/3d_blocks.png">
           <img src="resources/addons/3d_crystals.png">
           <img src="resources/addons/3d_ores.png">
       </div>
@@ -34,6 +34,7 @@
     </div>
     <script src="js/anime.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/base.js"></script>
     <script></script>
   </body>
 </html>
