i was tortured to do this pls send help

--- a/addons.html
+++ b/addons.html
@@ -21,8 +21,8 @@
     <div class="content">
       <div class="addons_card_container">
           <img id="3d_blocks_card" src="resources/addons/3d_blocks.png">
-          <img src="resources/addons/3d_crystals.png">
-          <img src="resources/addons/3d_ores.png">
+          <img id="3d_crystals_card" src="resources/addons/3d_crystals.png">
+          <img id="3d_ores_card" src="resources/addons/3d_ores.png">
       </div>
     </div>
     <div class="footer">
