--- a/index.html
+++ b/index.html
@@ -19,10 +19,24 @@
     </div>
     <div class="header_spacer"></div>
     <div class="banner">
+      <img class="banner_img" src="resources/banner/backgrounds/crystal_cave.png">
     </div>
     <div class="content">
       <div class="video_content">
         <iframe id="rp_video" src="https://www.youtube.com/embed/ILO8c9bjsgE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="transparent_text_container">
+        <div class="transparent_text">
+Bringing a nice comic look with some sweet mobs and blocks that you just want to hug, this pack takes Minecraft to a whole new level.
+
+- 16x16 resolution
+- Comic oriented look
+- Every block is made of randomly selected cubes
+- Uses the default color palette for that familiar feeling we all know and love
+- By Mr3DAlien
+        </div>
+        <div class="transparent_text_background">
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -34,6 +48,8 @@
     </div>
     <script src="js/anime.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script></script>
+    <script>
+
+    </script>
   </body>
 </html>
