--- a/bedrock_edition.html
+++ b/bedrock_edition.html
@@ -5,6 +5,7 @@
     <title>CubeChaos</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="icon" type="image/x-icon" href="resources/icons/cube_chaos_icon.svg" />
+
   </head>
   <body>
     <div id="header">
@@ -19,32 +20,46 @@
     </div>
     <div class="header_spacer"></div>
       <div class="content">
-        <img class="bedrock_logo" src="https://static.wixstatic.com/media/44b079_c23825e1f58d4cc4b3e8ddd877e82630~mv2.png/v1/fill/w_512,h_64,al_c,q_85/Bedrock%20edition.webp">
+        <img class="bedrock_logo" src="resources/logos/bedrock_edition.png">
         <div class="screenshot_slide">
           <div id="compare">
-            <img id="slider_left_img" src="resources/compare/compare_1_default.png" alt="Before" />
-            <img id="slider_right_img" src="resources/compare/compare_1_cubechaos.png" alt="After" />
+            <img id="slider_left_img" src="resources/screenshots/java_edition/forest_vanilla.png" alt="Before" />
+            <img id="slider_right_img" src="resources/screenshots/java_edition/forest_cubechaos.png" alt="After" />
           </div>
           <div class="screenshot_slide_selector">
-            <img class="screenshot_slide_preview_img" src="resources/compare/compare_1_cubechaos.png">
-            <img class="screenshot_slide_preview_img" src="resources/compare/compare_2_cubechaos.png">
-            <img class="screenshot_slide_preview_img" src="https://www.wallpaperflare.com/static/1005/886/331/minecraft-render-screen-shot-lake-wallpaper.jpg">
-            <img class="screenshot_slide_preview_img" src="https://www.wallpaperflare.com/static/1005/886/331/minecraft-render-screen-shot-lake-wallpaper.jpg">
-            <img class="screenshot_slide_preview_img" src="https://www.wallpaperflare.com/static/1005/886/331/minecraft-render-screen-shot-lake-wallpaper.jpg">
+            <img class="screenshot_slide_preview_img simg_0" src="resources/screenshots/java_edition/forest_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_1" src="resources/screenshots/java_edition/cave_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_2" src="resources/screenshots/java_edition/bee_hive_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_3" src="resources/screenshots/java_edition/jungle_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_4" src="resources/screenshots/java_edition/badlands_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_5" src="resources/screenshots/java_edition/desert_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_6" src="resources/screenshots/java_edition/pillager_outpost_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_7" src="resources/screenshots/java_edition/monument_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_8" src="resources/screenshots/java_edition/mansion_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_9" src="resources/screenshots/java_edition/snowy_tundra_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_10" src="resources/screenshots/java_edition/fortress_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_11" src="resources/screenshots/java_edition/bastion_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_12" src="resources/screenshots/java_edition/basalt_deltas_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_13" src="resources/screenshots/java_edition/soul_sand_valley_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_14" src="resources/screenshots/java_edition/warped_forest_cubechaos.png">
+            <img class="screenshot_slide_preview_img simg_15" src="resources/screenshots/java_edition/end_cubechaos.png">
           </div>
             <!--</div>
             <div class="screenshot_slide_selector_btn screenshot_slide_selector_left"></div>
             <div class="screenshot_slide_selector_btn screenshot_slide_selector_right"></div>
           </div> -->
         </div>
-        <div class="bedrock_marketplace_wrapper">
-            <a href="https://www.minecraft.net/en-us/pdp?id=17799e47-57a0-4167-84a3-d9a662b5e569">
-                <img class="get_on_marketplace_image" src="https://static.wixstatic.com/media/44b079_323d24d89f314809a4f216a41a0abf3b~mv2.png/v1/fill/w_600,h_122,al_c,q_85,usm_0.66_1.00_0.01/button_marketplace.webp">
-            </a>
-            <a href="http://changelogs.cubechaos.net/">
-                <img class="bedrock_changelog_button" src="https://static.wixstatic.com/media/44b079_fd12f0f005454db5b7db56750198ce1c~mv2.png/v1/fill/w_350,h_71,al_c,q_85/Changelogs%20Button.webp">
-            </a>
-        </div>
+        <div class="header_spacer"></div>
+        <div class="content">
+          <div class="bedrock_marketplace_wrapper">
+              <a href="https://www.minecraft.net/en-us/pdp?id=17799e47-57a0-4167-84a3-d9a662b5e569">
+                  <img class="get_on_marketplace_image" src="https://static.wixstatic.com/media/44b079_323d24d89f314809a4f216a41a0abf3b~mv2.png/v1/fill/w_600,h_122,al_c,q_85,usm_0.66_1.00_0.01/button_marketplace.webp">
+              </a>
+              <a href="http://changelogs.cubechaos.net/">
+                  <img class="bedrock_changelog_button" src="https://static.wixstatic.com/media/44b079_fd12f0f005454db5b7db56750198ce1c~mv2.png/v1/fill/w_350,h_71,al_c,q_85/Changelogs%20Button.webp">
+              </a>
+          </div>
+      </div>
     </div>
     <div class="footer">
       <div class="footer_content">
@@ -61,6 +76,8 @@
       document.addEventListener('DOMContentLoaded', function () {
         var beforeAfterExample = new BeforeAfter(document.querySelector('#compare'));
       });
+
+      
     </script>
   </body>
 </html>
