--- a/java_edition.html
+++ b/java_edition.html
@@ -51,7 +51,7 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360176" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
             <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_8990d0c894d041c1acdba74f90b3e7a8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_16%5D.webp"></a>
             <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_cf635856e6c241e6be58d76814f42b41~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_15%5D.webp"></a>
             <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_1400c5c7a5954b3fb8992dfc06df7169~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_14%5D.webp"></a>
