updated "java edition" page to use the folder locations of the website and also added some download links

--- a/java_edition.html
+++ b/java_edition.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
-    <title>CubeChaos</title>
+    <title>CubeChaos - Java Edition</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="icon" type="image/x-icon" href="resources/icons/cube_chaos_icon.svg" />
 
@@ -20,7 +20,7 @@
     </div>
     <div class="header_spacer"></div>
       <div class="content">
-        <img class="java_logo" src="https://static.wixstatic.com/media/44b079_f76f1cfd9cf549aaa1d33cabdc863a58~mv2.png/v1/fill/w_512,h_64,al_c,q_85/edition.webp">
+        <img class="java_logo" src="resources/logos/java_edition.png">
         <div class="screenshot_slide">
           <div id="compare">
             <img id="slider_left_img" src="resources/screenshots/java_edition/forest_vanilla.png" alt="Before" />
@@ -51,24 +51,24 @@
         </div>
         <div class="version_selection_wrapper">
           <div class="relevant_versions">
-            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360176" class="version"><img src="https://static.wixstatic.com/media/44b079_db99923fc2ad46eaafea687cf163189d~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_17%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_8990d0c894d041c1acdba74f90b3e7a8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_16%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_cf635856e6c241e6be58d76814f42b41~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_15%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_1400c5c7a5954b3fb8992dfc06df7169~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_14%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_bb1919d24ab9411fb3e0b65406a3cbc8~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_13%5D.webp"></a>
-            <a href="#" class="version"><img src="https://static.wixstatic.com/media/44b079_9d6e4accc2ff47008cc5d65518306d42~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_12%5D.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_b70dbf1e3bba4cc7839bc21b861f66c0~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_11%5D.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_cfd8087f587c417eb35b51a618a6dee5~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_10%5D.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_fddf8976d6af47cdb3aaa77a8752b266~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_9%5D.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_3b2d3b4b85cb44d6bdf7b9ffcd533728~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_8%5D.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_42c960057256448aa329a5f56c18cb14~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_7%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_81556dc9342d40dc8954f16f618e808e~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_6%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_07c88e34c35847508b191c62a59cf7d7~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_5%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_1cbac2acefac4e44bf44c3e346ec0315~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_4%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_b08bf65bd87b4a73b3e4912c38e777ef~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_3%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_9c646c0a1b10475ca0a200161534ae95~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_2%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_a36e0a91de584708ba8822869dcffe16~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_1%5D%20Red.webp"></a>
-            <a href="#" class="version additional_version"><img src="https://static.wixstatic.com/media/44b079_e9ebacf52993488993a778eda2ec616f~mv2.png/v1/fill/w_152,h_71,al_c,q_85/Version%20Button%20%5B1_0%5D.webp"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360176" class="version"><img src="resources/buttons/download_buttons/version_1.17_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3360174" class="version"><img src="resources/buttons/download_buttons/version_1.16_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325875" class="version"><img src="resources/buttons/download_buttons/version_1.15_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325889" class="version"><img src="resources/buttons/download_buttons/version_1.14_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325904" class="version"><img src="resources/buttons/download_buttons/version_1.13_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325907" class="version"><img src="resources/buttons/download_buttons/version_1.12_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325933" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.11_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325941" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.10_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3325951" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.9_green.png"></a>
+            <a href="https://www.curseforge.com/minecraft/texture-packs/cube-chaos/download/3333944" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.8_green.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.7_red.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.6_red.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.5_red.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.4_red.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.3_red.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.2_red.png"></a>
+            <a href="#" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.1_red.png"></a>
+            <a href="https://www.planetminecraft.com/texture-pack/cube-chaos-texture-pack/" class="version additional_version"><img src="resources/buttons/download_buttons/version_1.0_green.png"></a>
           </div>
           <div class="more_versions">
             <img id="more_versions_button" src="resources/buttons/download_buttons/more_button.png">
