"bedrock edition" page now uses files out of the folder

--- a/bedrock_edition.html
+++ b/bedrock_edition.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
-    <title>CubeChaos</title>
+    <title>CubeChaos - Bedrock Edition</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="icon" type="image/x-icon" href="resources/icons/cube_chaos_icon.svg" />
 
@@ -53,10 +53,10 @@
         <div class="content">
           <div class="bedrock_marketplace_wrapper">
               <a href="https://www.minecraft.net/en-us/pdp?id=17799e47-57a0-4167-84a3-d9a662b5e569">
-                  <img class="get_on_marketplace_image" src="https://static.wixstatic.com/media/44b079_323d24d89f314809a4f216a41a0abf3b~mv2.png/v1/fill/w_600,h_122,al_c,q_85,usm_0.66_1.00_0.01/button_marketplace.webp">
+                  <img class="get_on_marketplace_image" src="resources/buttons/download_buttons/button_marketplace.png">
               </a>
               <a href="http://changelogs.cubechaos.net/">
-                  <img class="bedrock_changelog_button" src="https://static.wixstatic.com/media/44b079_fd12f0f005454db5b7db56750198ce1c~mv2.png/v1/fill/w_350,h_71,al_c,q_85/Changelogs%20Button.webp">
+                  <img class="bedrock_changelog_button" src="resources/buttons/download_buttons/changelogs.png">
               </a>
           </div>
       </div>
