--- a/downloads.html
+++ b/downloads.html
@@ -2,15 +2,17 @@
 <html lang="">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
-    <title>CubeChaos</title>
+    <title>CubeChaos - Downloads</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="icon" type="image/x-icon" href="resources/icons/cube_chaos_icon.svg" />
   </head>
   <body>
     <div id="header">
       <div id="header_logo">
-        <img id="logo" src="resources/icons/cube_chaos_logo.png">
-        <img id="logo_text" src="resources/logos/cube_chaos_fullhd.png">
+        <a href="index.html">
+          <img id="logo" src="resources/icons/cube_chaos_logo.png">
+          <img id="logo_text" src="resources/logos/cube_chaos_fullhd.png">
+        </a>
       </div>
     </div>
     <div id="navbar">
