--- a/java_edition.html
+++ b/java_edition.html
@@ -10,8 +10,10 @@
   <body>
     <div id="header">
       <div id="header_logo">
-        <img id="logo" src="resources/icons/cube_chaos_logo.png">
-        <img id="logo_text" src="resources/logos/cube_chaos_fullhd.png">
+        <a href="index.html">
+          <img id="logo" src="resources/icons/cube_chaos_logo.png">
+          <img id="logo_text" src="resources/logos/cube_chaos_fullhd.png">
+        </a>
       </div>
     </div>
     <div id="navbar">
