banner wip started

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     </div>
     <div class="header_spacer"></div>
     <div class="banner">
-      <img class="banner_img" src="resources/banner/backgrounds/crystal_cave.png">
+      <img class="banner_img" id="banner_img_1" src="resources/banner/backgrounds/placeholder.png">
+      <img class="banner_img" id="banner_img_0" src="resources/banner/backgrounds/crystal_cave.png">
+      <div id="banner_arrow_left_container">
+        <img src="https://banner2.cleanpng.com/20180203/kyw/kisspng-arrow-clip-art-left-arrow-png-hd-5a7574115f1b58.4222399815176468653896.jpg">
+      </div>
+      <div id="banner_arrow_right_container">
+        <img src="https://banner2.cleanpng.com/20180203/kyw/kisspng-arrow-clip-art-left-arrow-png-hd-5a7574115f1b58.4222399815176468653896.jpg">
+      </div>
     </div>
     <div class="content">
       <div class="video_content">
@@ -50,6 +57,7 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
     </div>
     <script src="js/anime.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/banner.js"></script>
     <script>
 
     </script>
