--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
       <a href="downloads.html" class="navbar_button"> Downloads </a>
     </div>
     <div class="header_spacer"></div>
-    <div class="banner">
-      <img class="banner_img" id="banner_img_1" src="resources/banner/backgrounds/placeholder.png">
-      <img class="banner_img" id="banner_img_0" src="resources/banner/backgrounds/crystal_cave.png">
-      <div id="banner_arrow_left_container">
-        <img src="https://banner2.cleanpng.com/20180203/kyw/kisspng-arrow-clip-art-left-arrow-png-hd-5a7574115f1b58.4222399815176468653896.jpg">
+    <div class="banner_space">
+      <div class="banner_container">
+        <div class="banner_slide" id="banner_slide_0">
+          <img src="resources/logos/cube_chaos_fullhd.png">
+          <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/f/f8/Goat_JE1_BE1.png/revision/latest?cb=20201212024930">
+        </div>
+        <div class="banner_slide" id="banner_slide_1">
+          <img src="resources/logos/java_edition.png">
+          <img src="https://static.wikia.nocookie.net/minecraft_de_gamepedia/images/6/6c/Piglin.png/revision/latest?cb=20200215002218">
+        </div>
       </div>
-      <div id="banner_arrow_right_container">
-        <img src="https://banner2.cleanpng.com/20180203/kyw/kisspng-arrow-clip-art-left-arrow-png-hd-5a7574115f1b58.4222399815176468653896.jpg">
-      </div>
+      <button class="banner_button banner_left_button"></button>
+      <button class="banner_button banner_right_button"></button>
     </div>
     <div class="content">
       <div class="video_content">
