banner prototype ready

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div class="header_spacer"></div>
     <div class="banner_space">
       <div class="banner_container">
+        <div class="banner_container_background_holder banner_container_background_holder_0"></div>
+        <div class="banner_container_background_holder banner_container_background_holder_1"></div>
         <div class="banner_slide" id="banner_slide_0">
           <img src="resources/logos/cube_chaos_fullhd.png">
           <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/f/f8/Goat_JE1_BE1.png/revision/latest?cb=20201212024930">
@@ -30,6 +32,7 @@
           <img src="resources/logos/java_edition.png">
           <img src="https://static.wikia.nocookie.net/minecraft_de_gamepedia/images/6/6c/Piglin.png/revision/latest?cb=20200215002218">
         </div>
+        
       </div>
       <button class="banner_button banner_left_button"></button>
       <button class="banner_button banner_right_button"></button>
