--- a/static/html/addons_html/3d_ores.html
+++ b/static/html/addons_html/3d_ores.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <meta http-equiv="expires" content="43200">
     <title>CubeChaos</title>
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="icon" type="image/x-icon" href="/static/resources/icons/cube_chaos_icon.svg" />
