--- a/static/html/downloads.html
+++ b/static/html/downloads.html
@@ -2,6 +2,7 @@
 <html lang="">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> 
+    <meta http-equiv="expires" content="43200">
     <title>CubeChaos - Downloads</title>
     <link rel="stylesheet" href="/static/css/base.css">
     <link rel="icon" type="image/x-icon" href="/static/resources/icons/cube_chaos_icon.svg" />
