--- a/static/html/java_edition.html
+++ b/static/html/java_edition.html
@@ -81,9 +81,35 @@
     </div>
     <div class="footer">
       <div class="footer_content">
-        <img class="footer_item" id="footer_alien_logo" src="https://static.wixstatic.com/media/44b079_4f4e1ce88e374dac81f13f016ecb3e6c~mv2.png/v1/fill/w_120,h_114,al_c,q_85,usm_0.66_1.00_0.01/Mr3DAlien%20%5BWhite%5D.webp">
-        <img class="footer_item" id="footer_pathway_studio_logo" src="/static/resources/logos/pathway_studios.png">
-        <img class="footer_item" id="footer_sticky_piston_logo" src="https://static.wixstatic.com/media/44b079_eef048478f1d4916be00f1975f6f153e~mv2.png/v1/fill/w_464,h_120,al_c,q_85,usm_0.66_1.00_0.01/Stickypiston.webp">
+        <div class="footer_about_left">
+          <h4>About</h1>
+          <p>© 2018 - 2021 CubeChaos.net</p>
+          <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
+        </div>
+        <div class="footer_logo">
+          <img class="footer_cube_chaos_logo" src="/static/resources/icons/cube_chaos_logo.png">
+          <img class="footer_cube_chaos_logo_2" src="/static/resources/logos/cube_chaos_wide.png">
+        </div>
+        <div class="footer_about_right">
+          <div class="footer_legal">
+            <h4>Legal</h1>
+              <table>
+                <li><a href="https://twitter.com/mr3dalien">Terms and Conditions</a></li>
+                <li><a href="https://twitter.com/mr3dalien">Eula</a></li>
+                <li><a href="https://twitter.com/mr3dalien">Privacy Policy</a></li>
+                <li><a href="https://twitter.com/mr3dalien">Cookies Policy</a></li>
+              </table>
+          </div>
+          <div class="footer_links">
+            <h4>Links</h1>
+              <table>
+                <li><a href="https://twitter.com/mr3dalien">Twitter</a></li>
+                <li><a href="https://youtube.com/mr3dalien">Youtube</a></li>
+                <li><a href="https://github.com/Mr3DAlien/Alien-Webserver">GitHub</a></li>
+                <li><a href="http://mr3dalien.net">Mr3DAlien</a></li>
+              </table>
+          </div>
+        </div>
       </div>
     </div>
     <script src="/static/js/anime.min.js"></script>
