added legal stuff

--- a/static/html/addons.html
+++ b/static/html/addons.html
@@ -33,7 +33,7 @@
       <div class="footer_content">
         <div class="footer_about_left">
           <h4>About</h1>
-          <p>© 2018 - 2021 CubeChaos.net</p>
+          <p>© 2018 - 2021 Mr3DAlien</p>
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
@@ -44,10 +44,8 @@
           <div class="footer_legal">
             <h4>Legal</h1>
               <table>
-                <li><a href="https://twitter.com/mr3dalien">Terms and Conditions</a></li>
-                <li><a href="https://twitter.com/mr3dalien">Eula</a></li>
-                <li><a href="https://twitter.com/mr3dalien">Privacy Policy</a></li>
-                <li><a href="https://twitter.com/mr3dalien">Cookies Policy</a></li>
+                <li><a href="/static/html/terms_and_conditions.html">Terms and Conditions</a></li>
+                <li><a href="/static/html/privacy_policy.html">Privacy Policy</a></li>
               </table>
           </div>
           <div class="footer_links">
