--- a/static/html/index.html
+++ b/static/html/index.html
@@ -27,17 +27,25 @@
         <div class="banner_container_background_holder banner_container_background_holder_0"></div>
         <div class="banner_container_background_holder banner_container_background_holder_1"></div>
         <div class="banner_slide" id="banner_slide_0">
-          <img src="/static/resources/logos/cube_chaos_fullhd.png">
-          <img src="https://www.tescomaonlineshop.de/files/test.jpg?1566566588">
+          <div class="banner_slide_1_div">
+            <img src="/static/resources/logos/cube_chaos_white_border.png">
+            <img src="/static/resources/logos/cave_update.png">
+          </div>
+          <img src="https://api.mcpedl.com/storage/submissions/109882/images/better-goats_2.png">
         </div>
         <div class="banner_slide" id="banner_slide_1">
-          <img src="/static/resources/logos/java_edition.png">
-          <img src="https://www.tescomaonlineshop.de/files/test.jpg?1566566588">
+          <div class="banner_slide_1_div">
+            <img src="/static/resources/logos/cube_chaos_white_border.png">
+            <img id="banner_nether_update" src="/static/resources/logos/nether_update.png">
+          </div>
+          <img src="https://render.namemc.com/skin/3d/body.png?skin=0c92ffd8432955b5&model=classic&width=282&height=282">
         </div>
         
       </div>
       <button class="banner_button banner_left_button"></button>
-      <button class="banner_button banner_right_button"></button>
+      <button class="banner_button banner_right_button">
+        <img src="https://img1.pnghut.com/21/17/2/HG0DLvrspQ/symbol-cursor-black-user-interface-button.jpg" width="20px" height="20px">
+      </button>
     </div>
     <div class="content">
       <div class="video_content">
@@ -61,7 +69,7 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
       <div class="footer_content">
         <div class="footer_about_left">
           <h4>About</h1>
-          <p>© 2018 - 2021 CubeChaos.net</p>
+          <p>© 2018 - 2021 Mr3DAlien</p>
           <p>CubeChaos.net is the official website dedicated to Mr3DAliens CubeChaos</p>
         </div>
         <div class="footer_logo">
@@ -72,10 +80,8 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
           <div class="footer_legal">
             <h4>Legal</h1>
               <table>
-                <li><a href="https://twitter.com/mr3dalien">Terms and Conditions</a></li>
-                <li><a href="https://twitter.com/mr3dalien">Eula</a></li>
-                <li><a href="https://twitter.com/mr3dalien">Privacy Policy</a></li>
-                <li><a href="https://twitter.com/mr3dalien">Cookies Policy</a></li>
+                <li><a href="/static/html/terms_and_conditions.html">Terms and Conditions</a></li>
+                <li><a href="/static/html/privacy_policy.html">Privacy Policy</a></li>
               </table>
           </div>
           <div class="footer_links">
