--- a/static/html/privacy_policy.html
+++ b/static/html/privacy_policy.html
@@ -23,28 +23,19 @@
     </div>
     <div class="header_spacer"></div>
     <div class="content">
-        <div class="team_container">
-            <div class="team_member_container">
-                <img class="team_picture" src="/static/resources/team/logo/mr3dalien_background.png">
-                <div class="transparent_text_container team_text">
-                    <div class="transparent_text">Hey, my name is Mr3DAlien.
-                    </div>
-                    <div class="transparent_text_background">
-                    </div>
-                </div>
-            </div>
-            <div class="team_member_container" id="team_member_to_swap_0">
-                <div class="transparent_text_container team_text" id="textbox_to_swap_0">
-                    <div class="transparent_text">Yo, I'm Alex and I'm the guy that developed this website and who is currently maintaining it.
-                    </div>
-                    <div class="transparent_text_background">
-                    </div>
-                </div>
-                <img class="team_picture" id="team_picture_to_swap_0" src="/static/resources/team/logo/alexander.png">
-            </div>
+      <div class="transparent_text_container">
+        <div class="transparent_text"><h2>PRIVACY POLICY</h2>
+<h3>COLLECTION AND USE</h3>CubeChaos.net itself does not save any user data nor does it use any cookies.
+<h3>THIRD-PARTY COOKIES</h3>CubeChaos.net uses Google AdSense, which does use cookies. These cookies are used to serve ads in our service. Mr3DAlien does not manage any of this data. In case you wish to opt out of interest-based advertisement by Google, visit this page: http://www.google.com/ads/preferences
+<h3>LINKS TO DIFFERENT WEBSITES</h3>CubeChaos.net contains several links to different third-party websites and web services. These webservices may use cookies and may collect data. Mr3DAlien has no responsibilty and no control over their privacy practices.
+<h3>SERVER HOST</h3>The server on which CubeChaos.net runs on is hosted by companies called "OVH SAS" and "StickyPiston". Mr3DAlien can not guarantee that no user data is collected by said hosts. Please refer to https://www.ovh.com and https://stickypiston.co for more information.
+<h3>CONTACT</h3>In case there are any questions left, please contact us under:
+contact@cubechaos.net
         </div>
+        <div class="transparent_text_background">
+        </div>
+      </div>
     </div>
-    
     <div class="footer">
       <div class="footer_content">
         <div class="footer_about_left">
@@ -78,31 +69,9 @@
     </div>
     <script src="/static/js/anime.min.js"></script>
     <script src="/static/js/jquery-3.6.0.min.js"></script>
-    <script src="/static/js/base.js"></script>
+    <script src="/static/js/banner.js"></script>
     <script>
-    $(window).on('load resize', function() { //Fires when window is loaded or resized
-      var div1 = $('#textbox_to_swap_0');
-      var div2 = $('#team_picture_to_swap_0');
-      var wrapper = $('#team_member_to_swap_0');
 
-      if ($(window).width() > 1000) {
-        wrapper.prepend(div1).append(div2); // move div 1 to start & div2 to end
-      } else {
-        wrapper.prepend(div2).append(div1); // move div 2 to start & div 1 to end
-      }
-    });
-
-    setTimeout(function () {
-        $(".team_text").height($(".team_picture").height()); 
-        $(".team_text").height($(".team_text").height()-3); 
-    }, 200);
-    
-    $(window).resize(function () {
-        if ($(window).width() >= 1000) {
-          $(".team_text").height($(".team_picture").height()); 
-          $(".team_text").height($(".team_text").height() - 3); 
-        }
-    });
     </script>
   </body>
 </html>
