--- a/static/html/index.html
+++ b/static/html/index.html
@@ -9,12 +9,21 @@
   </head>
   <body>
     <div id="header">
-      <div id="header_logo">
-        <a href="/static/html/index.html">
-          <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
-          <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
-        </a>
+      <div id="header_content">
+        <div id="header_logo">
+          <a id="header_logo_a" href="/static/html/index.html">
+            <img id="logo" src="/static/resources/icons/cube_chaos_logo.png">
+            <img id="logo_text" src="/static/resources/logos/cube_chaos_fullhd.png">
+          </a>
+        </div>
+        <div id="header_space_between">
+          
+        </div>
+        <div id="header_icons">
+          <img src="/static/resources/icons/github.png">
       </div>
+      </div>
+      
     </div>
     <div id="navbar">
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
