added new goat texture to the banner

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -31,7 +31,7 @@
             <img src="/static/resources/logos/cube_chaos_white_border.png">
             <img src="/static/resources/logos/cave_update.png">
           </div>
-          <img src="https://api.mcpedl.com/storage/submissions/109882/images/better-goats_2.png">
+          <img src="/static/resources/banner/mobs/goat.png">
         </div>
         <div class="banner_slide" id="banner_slide_1">
           <div class="banner_slide_1_div">
