--- a/static/html/index.html
+++ b/static/html/index.html
@@ -17,13 +17,23 @@
           </a>
         </div>
         <div id="header_space_between">
-          
+
         </div>
         <div id="header_icons">
-          <img src="/static/resources/icons/github.png">
+          <a href="https://youtube.com">
+            <img src="/static/resources/icons/github.png">
+          </a>
+          <a href="https://youtube.com">
+            <img src="/static/resources/icons/github.png">
+          </a>
+          <a href="https://youtube.com">
+            <img src="/static/resources/icons/github.png">
+          </a>
+          <a href="https://youtube.com">
+            <img src="/static/resources/icons/github.png">
+          </a>
+        </div>
       </div>
-      </div>
-      
     </div>
     <div id="navbar">
       <a href="/static/html/index.html" class="navbar_button"> Home </a>
