--- a/static/html/index.html
+++ b/static/html/index.html
@@ -20,17 +20,19 @@
 
         </div>
         <div id="header_icons">
-          <a href="https://youtube.com">
-            <img src="/static/resources/icons/github.png">
+          <a href="https://twitter.com/CubeChaosRP">
+            <img id="header_twitter_icon" src="/static/resources/icons/twitter.png">
           </a>
-          <a href="https://youtube.com">
-            <img src="/static/resources/icons/github.png">
+          <a href="https://github.com/Mr3DAlien/Alien-Webserver">
+            <img id="header_github_icon" src="/static/resources/icons/github.png">
           </a>
-          <a href="https://youtube.com">
-            <img src="/static/resources/icons/github.png">
+          <a href="http://mr3dalien.net/">
+            <img id="header_mr3dalien_icon" src="/static/resources/icons/mr3dalien.png">
           </a>
-          <a href="https://youtube.com">
-            <img src="/static/resources/icons/github.png">
+        </div>
+        <div id="banner_sticky_piston_logo">
+          <a href="https://stickypiston.co/r/Mr3DAlien">
+            <img src="/static/resources/icons/stickypiston.png">
           </a>
         </div>
       </div>
@@ -118,6 +120,7 @@ Bringing a nice comic look with some sweet mobs and blocks that you just want to
     <script src="/static/js/anime.min.js"></script>
     <script src="/static/js/jquery-3.6.0.min.js"></script>
     <script src="/static/js/banner.js"></script>
+    <script src="/static/js/base.js"></script>
     <script>
 
     </script>
